[package]
name = "tradetech"
version = "0.1.0"
edition = "2021"

[lib]
name = "matcher"
path = "src/matcher.rs"

[[bin]]
name = "tradetech"
path = "src/main.rs"

[dependencies]
criterion = "0.3"
strum = { version = "0.23", features = ["derive"] }
priority-queue = "1.2.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bench]]
name = "tradetech_benchmark"
harness = false
